<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
<TextView
    android:id="@+id/tv_theme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Themes"
    android:textSize="20sp"

    android:layout_centerHorizontal="true"/>
<RadioGroup
    android:id="@+id/rg_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/tv_theme"
    >
<RadioButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rb_def_theme"
    android:text="@string/default_theme"
    android:checked="true"

    />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rb_green_theme"
        android:text="@string/green_theme"

        />
</RadioGroup>
    <TextView
        android:id="@+id/tv_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rg_1"/>
    <RadioGroup
        android:id="@+id/rg_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_lang"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_def_lang"
            android:text="@string/english"
            android:checked="true"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_uk_lang"
            android:text="@string/ukrainians"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_ru_lang"
            android:text="@string/russian"
            />
    </RadioGroup>
</RelativeLayout>
